feat: allow root user to register other user accounts