@@ -4,94 +4,89 @@ import lombok.NonNull;
 import org.jdesktop.swingx.JXLabel;
 import org.jdesktop.swingx.JXPanel;
 import org.jdesktop.swingx.JXTextField;
-import ui.util.FieldMetadata;
 import ui.util.GBC;
 import util.Metadata;
 import util.MetadataSupplier;
 
-import javax.swing.*;
 import java.awt.*;
 
 
+import javax.swing.*;
 import javax.swing.text.AbstractDocument;
 import javax.swing.text.AttributeSet;
 import javax.swing.text.BadLocationException;
 import javax.swing.text.DocumentFilter;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.regex.Pattern;
 
 public class DataIOPanel extends JXPanel implements MetadataSupplier<String> {
     private final Metadata<String> metadata;
-    private final FieldMetadata fields = new FieldMetadata();
+    private final List<JTextField> fields = new ArrayList<>();
     private final GridBagConstraints gbc = new GBC(0, 0, 1, 1);
 
     public DataIOPanel(@NonNull MetadataSupplier<String> metadataSupplier) {
         metadata = metadataSupplier.getMetadata();
         setLayout(new GridBagLayout());
-        populate();
+        addTextFields();
     }
 
-    public void populate() {
+    public void addTextFields() {
         for (int i = 1; i <= metadata.getColumnCount(); i++) {
-            var textField = new JXTextField("Enter " + metadata.getColumnLabel(i));
-            textField.setColumns(metadata.getColumnDisplaySize(i));
-            setTextFieldValidation(textField);
+            var textField = withValidation(new JXTextField("请输入" + metadata.getColumn(i)), 16);
+            textField.setColumns(metadata.getDisplaySize(i));
             fields.add(textField);
-            addFieldWithLabel(new JXLabel(metadata.getColumnLabel(i)), textField);
+            addFieldWithLabel(new JXLabel(metadata.getColumn(i)), textField);
         }
     }
 
-    private void addFieldWithLabel(JXLabel label, JXTextField textField) {
-        addJLabel(label);
-        addTextField(textField);
+    private @NonNull JTextField withValidation(@NonNull JTextField textField, int maxLength) {
+        ((AbstractDocument) textField.getDocument()).setDocumentFilter(new AlphanumericFilter(maxLength));
+        return textField;
+    }
+
+    private void addFieldWithLabel(JLabel label, JTextField textField) {
+        addLeft(label);
+        addRight(textField);
         gbc.gridy++;
     }
 
-    private void addJLabel(JXLabel label) {
+    private void addLeft(Component component) {
         gbc.gridx = 0;
         gbc.anchor = GridBagConstraints.EAST;
-        add(label, gbc);
+        add(component, gbc);
     }
 
-    private void addTextField(JTextField textField) {
+    private void addRight(Component component) {
         gbc.gridx = 1;
         gbc.anchor = GridBagConstraints.WEST;
-        add(textField, gbc);
+        add(component, gbc);
     }
 
-    public void replaceWithPasswordField(int column) {
-        var passwordField = new JPasswordField(metadata.getColumnDisplaySize(column));
-        setPasswordFieldValidation(passwordField);
-
-        remove(fields.remove(column - 1));
-        gbc.gridy = column - 1;
-        addTextField(passwordField);
+    public void replaceWith(int index, Component component) {
+        remove(fields.remove(index - 1));
+        gbc.gridy = index - 1;
+        addRight(component);
         revalidate();
         repaint();
-        fields.add(column - 1, passwordField);
     }
 
-    private void setTextFieldValidation(JTextField textField) {
-        ((AbstractDocument) textField.getDocument()).setDocumentFilter(new AlphanumericFilter(16));
-    }
-
-    private void setPasswordFieldValidation(JPasswordField passwordField) {
-        ((AbstractDocument) passwordField.getDocument()).setDocumentFilter(new AlphanumericFilter(16));
+    public void replaceWithPasswordField(int index) {
+        var passwordField = withValidation(new JPasswordField(metadata.getDisplaySize(index)), 16);
+        replaceWith(index, passwordField);
+        fields.add(index - 1, passwordField);
     }
 
     public void resetAllFields() {
         fields.forEach(field -> field.setText(""));
-        fields.getFirst().requestFocus();
+        fields.get(0).requestFocus();
     }
 
-    public @NonNull JTextField getTextField(int column) {
-        return fields.getColumnLabel(column);
-    }
-
-    public @NonNull String getTextOf(int column) {
-        var field = getTextField(column);
-        return (field instanceof JPasswordField) ?
-                String.valueOf(((JPasswordField) field).getPassword()) :
-                field.getText();
+    public @NonNull String getTextOf(int index) {
+        var field = fields.get(index - 1);
+        return field instanceof JPasswordField
+                ? String.valueOf(((JPasswordField) field).getPassword())
+                : field.getText();
     }
 
     @Override
